<resources>
    <string name="app_name">Calculate BMI</string>
    <string name="bmi">BMI</string>
    <string name="sport_music">sport music</string>
    <string name="health">Health</string>
    <string name="clip">Clips</string>
    <string name="newspapers">News Papers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error">خطا در برقراری ارتباط با سرور</string>
    <string name="trx">TRX</string>
    <string name="ems">EMS</string>
    <string name="default_duration">00:00</string>
    <string name="btmi_title_height">Height in cm</string>
    <string name="btmi_title_wight">Weight in kg</string>
    <string name="bmi_title_age">Age</string>
    <string name="bmi_result_title">Your BMI : </string>
    <string name="weight_renge_title">Weight Normal Range</string>
    <string name="bmi_more_than_40_description">Dangerous Range </string>
    <string name="bmi_more_than_40">More than 40</string>
    <string name="bmi_30_to_40_description">Extreme Over Weight</string>
    <string name="bmi_30_to_40">30 to 40</string>
    <string name="bmi_25_to_30">25 to 30</string>
    <string name="bmi_25_to_30_description">Over Weight</string>
    <string name="bmi_20_to_25">20 to 25</string>
    <string name="bmi_20_to_25_description">Optimal Weight</string>
    <string name="bmi_18.5_to_20">18.5 to 20</string>
    <string name="bmi_18.5_to_20_description">Thin</string>
    <string name="bmi_below_18.5">Less than 18.5</string>
    <string name="bmi_below_18.5_description">Extreme Thin</string>
    <string name="watch_video">مشاهده ویدیو</string>
    <string name="share">Share</string>
    <string name="download_description">Download From here: </string>
    <string name="share_using">Share Via</string>
    <string name="download_url">https://goo.gl/P5uld</string>
    <string name="search_title">Search</string>
    <string name="consumed_foods">Used Foods</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="add_food">Add Food</string>
    <string name="consumed_calories">consumed calories‌</string>
    <string name="burned_calories">burned calories‌</string>
    <string name="activities">Activities during day</string>
    <string name="start">start</string>
    <string name="app_description">calculate your body BMI and how much calories you earned and consumed during the day</string>
    <string name="nuts">nuts</string>
    <string name="meal">meal</string>
    <string name="cake">cake</string>
    <string name="low_fat_steak">low fat steak</string>
    <string name="high_fat_steak">high fat steak</string>
    <string name="dinner">dinner</string>
    <string name="launch">launch</string>
    <string name="breakfast">breakfast</string>
    <string name="snack">snack</string>
    <string name="amount">amount</string>
    <string name="enter_amount">please enter amount</string>
    <string name="nutritional_value">Nutritional Value</string>
    <string name="glass">glass</string>
    <string name="grams">grams</string>
    <string name="calory">calories</string>
    <string name="proteins">proteins</string>
    <string name="activity_duration">activity duration</string>
    <string name="minute">Minute</string>
    <string name="confirm">confirm</string>
    <string name="earned_calories">earned calories :</string>
    <string name="gam">gam</string>
    <string name="mixed_nuts">Mixed Nuts</string>
    <string name="cashew">cashew</string>
    <string name="peanut">peanut</string>
    <string name="almond">almond</string>
    <string name="fig_fresh">fresh fig</string>
    <string name="fig_dried">dried fig</string>
    <string name="otmil">otmil</string>
    <string name="Apricot">Apricot</string>
    <string name="wafers">Wafers</string>
    <string name="mixed_brains">mixed brains</string>
    <string name="popcorn">popcorn</string>
    <string name="pistachio_with_skin">pistachio with skin</string>
    <string name="pistachio_without_skin">pistachio without skin</string>
    <string name="dried_peach">برگه هلو</string>
    <string name="dried_coconut">Dried Coconut</string>
    <string name="zante_currant">Zante currant</string>
    <string name="fruit_leather">Fruit leather</string>
    <string name="walnut">Walnut</string>
    <string name="raisin_cake">Raisin cake</string>
    <string name="raisin">raisin</string>
    <string name="sesame">Sesame</string>
    <string name="dried_curd">dried curd</string>
    <string name="liquid_curd">liquid curd</string>
    <string name="gheysi">Gheysi</string>
    <string name="hazelnut">Hazelnut</string>
    <string name="jujube">Jujube</string>
    <string name="milk_chocolate">milk chocolate</string>
    <string name="white_chocolate">white chocolate</string>
    <string name="maple_juice">maple juice</string>
    <string name="hemp">mHemp</string>
    <string name="russian_olive">Russian Olive</string>
    <string name="samanu">Samanu</string>
    <string name="beaf_samosa">Samosa</string>
    <string name="potato_samosa">Potato Samosa</string>
    <string name="peanut_without_skin">Potato Samosa</string>
    <string name="watermelo_seeds">watermelo_kuaci</string>
    <string name="pumpkin_seeds">pumpkin seeds</string>
    <string name="japanese_seeds">japanese seeds</string>
    <string name="esquites_with_cheese">Esquites with cheese</string>
    <string name="esquites_without_cheese">Esquites without cheese</string>
    <string name="icecream">Icecream</string>
    <string name="potato_chip_with_cheese">potato chip with cheese</string>
    <string name="potato_chip">چیپس</string>
    <string name="cheese_puffs">پفک</string>
    <string name="sunflower_seed">sunflower seed</string>
    <string name="singed_maize">ذرت singed maize</string>
    <string name="cherry_pilaw">cherry pilaf</string>
    <string name="spanish_rice">Spanish rice</string>
    <string name="white_cooked_rice">white cooked rice</string>
    <string name="brown_cooked_rice">brown_cooked rice</string>
    <string name="pilaf_with_oil">pilaf with oil</string>
    <string name="pilaf_without_oil">pilaf without oil</string>
    <string name="kateh_without_oil">kateh without oil</string>
    <string name="kateh_with_oil">kateh with oil</string>
    <string name="eggplant_tahchin">eggplant tahchin</string>
    <string name="meat_tahchin">meat tahchin</string>
    <string name="chiken_tahchin">chiken tahchin</string>
    <string name="rice_tahchin">rice tahchin</string>
    <string name="potato_tahchin">potato tahchin</string>
    <string name="bread_tahchin">bread tahchin</string>
    <string name="dum_pukht">Dum pukht</string>
    <string name="potato_dum_pukht">potato Dum pukht</string>
    <string name="reshte_pilaf">reshte pilaf</string>
    <string name="barberry_pilaf">barberry pilaf</string>
    <string name="vegtables_pilaf">vegetables pilaf</string>
    <string name="sweet_pilaf">sweet pilaf</string>
    <string name="lentil_pilaf">Lentil pilaf</string>
    <string name="cabbage_pilaf">cabbage pilaf</string>
    <string name="dill_kofte">dill kofte</string>
    <string name="broad_bean_pilaf">Broad bean pilaf</string>
    <string name="bean_pilaf">bean pilaf</string>
    <string name="mung_bean_pilaf">mung bean pilaf</string>
    <string name="marsa_pilaf">marsa pilaf</string>
    <string name="shrimp_pilaf">Shrimp pilaf</string>
    <string name="chickpea_pilaf">Chickpea pilaf</string>
    <string name="carrot_pilaf">carrot pilaf</string>
    <string name="candy">candy</string>
    <string name="tahini">Tahini</string>
    <string name="Baklava">Baklava</string>
    <string name="Okra">Okra</string>
    <string name="Chocolate_brownie">Chocolate brownie</string>
    <string name="saghe_talaee_biscuite">saghe_talaee_biscuit</string>
    <string name="saghe_talaee_biscuite_chocolate">saghe talaee biscuit Chocolate</string>
    <string name="biscuit_with_cream">chocolate whit cream</string>
    <string name="apple_pie">apple_pie</string>
    <string name="Gummy_candy">Gummy candy</string>
    <string name="Cotton_candy">Cotton candy</string>
    <string name="pancake">Pancake</string>
    <string name="Poolaki">Poolaki</string>
    <string name="Pirozhki">Pirozhki</string>
    <string name="Tiramisu">Tiramisu</string>
    <string name="flax">flax</string>
    <string name="cheese_cake">cheese cake</string>
    <string name="halva">halva</string>
    <string name="Sesame_Dough">Sesame Dough</string>
    <string name="Doughnut">Doughnut</string>
    <string name="Jalebi">Jalebi</string>
    <string name="Gelatin">Gelatin</string>
    <string name="Sohan">Sohan</string>
    <string name="suger">sugar</string>
    <string name="brown_suger">brown sugar</string>
    <string name="snickers">Snickers</string>
    <string name="Dark_chocolate_75">Dark chocolate %75</string>
    <string name="Dark_chocolate_80">Dark chocolate %80</string>
    <string name="Dark_chocolate_85">Dark chocolate %85</string>
    <string name="Dark_chocolate_90">Dark chocolate %90</string>
    <string name="Dark_chocolate_99">Dark chocolate %99</string>
    <string name="simple_chocolate">simple chocolate %99</string>
    <string name="coconut_chocolate">coconut chocolate %99</string>
    <string name="breakfast_chocolate">breakfast chocolate</string>
    <string name="Sholezard">Sholezard</string>
    <string name="rice_pudding">rice pudding</string>
    <string name="grape_syrup">Grape syrup</string>
    <string name="Date_palm_syrup">date palm syrup</string>
    <string name="cream_cookie">cream cookie</string>
    <string name="cookie">cookie</string>
    <string name="danish_pastry">Danish pastry</string>
    <string name="puff_pastry">puff pastry</string>
    <string name="Raisin_pastry">Raisin pastry</string>
    <string name="latife_pastry">latife pastry</string>
    <string name="Mille_feuille">Mille-feuille</string>
    <string name="coconut_pastry">Mille-feuille</string>
    <string name="honey">Honey</string>
    <string name="faloodeh">Faloodeh</string>
    <string name="kheer">Kheer</string>
    <string name="qottab">Qottab</string>
    <string name="sugar_cube">sugar cube</string>
    <string name="Cupcake">Cupcake</string>
    <string name="Kuymak">Kuymak</string>
    <string name="cocoa">Cocoa</string>
    <string name="Croissant">Croissant</string>
    <string name="Crème_caramel">Creme caramel</string>
    <string name="potato_Croissant">potato Croissant</string>
    <string name="Croissant_with_cheese">Croissant with cheese</string>
    <string name="Croissant_without_cheese">Croissant with cheese</string>
    <string name="corn_flakes">Corn flakes</string>
    <string name="cream_cake">cream cake</string>
    <string name="red_velvet_cake">red velvet cake</string>
    <string name="simple_cake">simple_cake</string>
    <string name="chocolate_cake">chocolate cake</string>
    <string name="Walnut_cake">Walnut cake</string>
    <string name="carrot_cake">carrot cake</string>
    <string name="yazd_cake">yazd cake</string>
    <string name="gaz">gaz</string>
    <string name="jam">jam</string>
    <string name="cherry_jam">jam</string>
    <string name="Citron_jam">Citron jam</string>
    <string name="Quince_jam">Quince jam</string>
    <string name="Strawberry_jam">Strawberry jam</string>
    <string name="carrot_jam">carrot jam</string>
    <string name="Masghati">Masghati</string>
    <string name="rice_bread">rice bread</string>
    <string name="Rosette">Rosette</string>
    <string name="cream_bread">cream bread</string>
    <string name="Leblebi_bread">Leblebi bread</string>
    <string name="rock_candy">rock_candy</string>
    <string name="noghl">noghl</string>
    <string name="Nutella">Nutella</string>
    <string name="Vanilla">Vanilla</string>
    <string name="baghala_ghatogh">baghala_ghatogh</string>
    <string name="tas_kebab">tas kebab</string>
    <string name="torshi_tare">torshi tare</string>
</resources>