<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:background="@drawable/dot"
        app:layout_constraintBottom_toBottomOf="@+id/meal_text_view"
        app:layout_constraintEnd_toStartOf="@id/meal_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/meal_text_view" />

    <View
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:background="@drawable/dot"
        app:layout_constraintBottom_toBottomOf="@id/consumed_amount_txt_view"
        app:layout_constraintEnd_toStartOf="@id/consumed_amount_txt_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/consumed_amount_txt_view" />

    <View
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:background="@drawable/dot"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:layout_constraintEnd_toStartOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_2"
        android:textColor="@color/bmi_30_to_40"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="قورمه سبزی" />

    <TextView
        android:id="@+id/meal_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_3"
        android:layout_marginTop="@dimen/space_3"
        android:text="@string/meal"
        android:textColor="@color/bmi_30_to_40"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/meals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/meal_text_view">

        <TextView
            android:id="@+id/add_food_dialog_breakfast"
            style="@style/mealsStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/add_food_dialog_items_background"
            android:drawableTop="@drawable/ic_breakfast"
            android:drawablePadding="5dp"
            android:text="@string/breakfast"
            android:textAlignment="center"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/add_food_dialog_dinner"
            app:layout_constraintEnd_toStartOf="@+id/add_food_dialog_dinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_food_dialog_dinner" />

        <TextView
            android:id="@+id/add_food_dialog_dinner"
            style="@style/mealsStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/add_food_dialog_items_background"
            android:drawableTop="@drawable/ic_dinner"
            android:drawablePadding="5dp"
            android:text="@string/dinner"
            android:textAlignment="center"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/add_food_dialog_launch"
            app:layout_constraintEnd_toStartOf="@+id/add_food_dialog_launch"
            app:layout_constraintStart_toEndOf="@+id/add_food_dialog_breakfast"
            app:layout_constraintTop_toTopOf="@+id/add_food_dialog_launch" />

        <TextView
            android:id="@+id/add_food_dialog_launch"
            style="@style/mealsStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/add_food_dialog_items_background"
            android:drawableTop="@drawable/ic_utensils_alt"
            android:drawablePadding="5dp"
            android:text="@string/launch"
            android:textAlignment="center"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@+id/add_food_dialog_mianvade"
            app:layout_constraintEnd_toStartOf="@+id/add_food_dialog_mianvade"
            app:layout_constraintStart_toEndOf="@+id/add_food_dialog_dinner"
            app:layout_constraintTop_toTopOf="@+id/add_food_dialog_mianvade" />

        <TextView
            android:id="@+id/add_food_dialog_mianvade"
            style="@style/mealsStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/add_food_dialog_items_background"
            android:drawableTop="@drawable/ic_bread"
            android:drawablePadding="5dp"
            android:text="@string/snack"
            android:textAlignment="center"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_food_dialog_launch"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/consumed_amount_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2"
        android:layout_marginTop="@dimen/space_3"
        android:text="@string/amount"
        android:textColor="@color/bmi_30_to_40"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meals" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/consumed_amount_txt_view">

        <EditText
            android:id="@+id/add_food_dialog_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2"
            android:layout_marginTop="@dimen/space_4"
            android:layout_marginBottom="@dimen/space_4"
            android:autofillHints="auto fill hint"
            android:background="@drawable/amount_background"
            android:hint="@string/enter_amount"
            android:inputType="number"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/bmi_30_to_40"
            android:textColorHint="@color/bmi_20_to_25"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/add_food_dialog_glass_text_view"
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/amount_background"
            android:text="@string/glass"
            android:textAlignment="center"
            android:textColor="@color/bmi_30_to_40"
            android:textColorHint="@color/bmi_20_to_25"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toEndOf="@+id/add_food_dialog_edit_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_food_dialog_gram_text_view"
            android:layout_width="50dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/amount_background"
            android:hint="@string/grams"
            android:textAlignment="center"
            android:textColor="@color/bmi_30_to_40"
            android:textColorHint="@color/bmi_20_to_25"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/add_food_dialog_glass_text_view"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/add_food_dialog_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/add_food_dialog_glass_text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/textView"
        style="@style/FoodDialogTextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_3"
        android:layout_marginTop="@dimen/space_3"
        android:text="@string/nutritional_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout" />

    <LinearLayout
        android:id="@+id/amountHolder"
        android:layout_marginTop="@dimen/space_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/textView">
        <TextView
            android:id="@+id/Consumed_calories_text_view"
            style="@style/ConsumedAmount"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/calory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/consumedProteinsTextView"
            style="@style/ConsumedAmount"
            android:layout_width="0dp"
            android:layout_margin="@dimen/space_1"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/proteins"
            app:layout_constraintBottom_toBottomOf="@+id/Consumed_calories_text_view"
            app:layout_constraintEnd_toStartOf="@+id/Consumed_calories_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Consumed_calories_text_view" />
    </LinearLayout>
    <Button
        android:id="@+id/add_food_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2"
        android:layout_marginBottom="@dimen/space_4"
        android:background="@drawable/add_food_confirm_background"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountHolder" />


</androidx.constraintlayout.widget.ConstraintLayout>